updated skills, corrected typo

--- a/cv.html
+++ b/cv.html
@@ -55,7 +55,7 @@ permalink: /cv/
 
     <p>06/2011 - 12/2011</p>
     
-    <p>Sole front-end dev in a small agency specialising in public and non-for-profit organisations. Working on a number of concurrent .NET and PHP based sites bring much needed coherence to the front-end role in a sector sensitive to real value in delivery.</p>
+    <p>Sole front-end dev in a small agency specialising in public and non-for-profit organisations. Working on a number of concurrent .NET and PHP based sites bringing much needed coherence to the front-end role in a sector sensitive to real value in delivery.</p>
 </article>
 
 <article class="job">
