try removing src to stop double download

--- a/external/with_srcset.sizes.html
+++ b/external/with_srcset.sizes.html
@@ -29,7 +29,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-md-6">
-            <img src="https://responsiveimages.org/demos/on-a-grid/img/yacht_race@fallback.jpg" srcset="
+            <img srcset="
 			https://responsiveimages.org/demos/on-a-grid/img/yacht_race@mobile.jpg 320w,
 			https://responsiveimages.org/demos/on-a-grid/img/yacht_race@tablet.jpg 768w,
 			https://responsiveimages.org/demos/on-a-grid/img/yacht_race@desktop.jpg 1024w" sizes="
