--- a/external/with_srcset.sizes.html
+++ b/external/with_srcset.sizes.html
@@ -31,11 +31,7 @@
         <div class="col-xs-12 col-md-6">
             <picture>
                 <!--[if IE 9]><video style="display: none;"><![endif]-->
-                <source srcset="../img/yacht_race@mobile.jpg 320w,
-                    ../img/yacht_race@tablet.jpg 768w,
-                    ../img/yacht_race@desktop.jpg 1024w" sizes="
-                    (min-width: 768px) 50vw,
-                    100vw" alt="A very exciting yacht race.">
+                <source srcset="../img/yacht_race@mobile.jpg 320w,../img/yacht_race@tablet.jpg 768w,../img/yacht_race@desktop.jpg 1024w" sizes="(min-width: 768px) 50vw,100vw" alt="A very exciting yacht race.">
                 <!--[if IE 9]></video><![endif]-->
                 <img alt="Image">
             </picture>
