--- a/external/with_srcset.sizes.html
+++ b/external/with_srcset.sizes.html
@@ -29,12 +29,12 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-md-6">
-            <picture>
-                <!--[if IE 9]><video style="display: none;"><![endif]-->
-                <source srcset="../img/yacht_race@mobile.jpg 320w,../img/yacht_race@tablet.jpg 768w,../img/yacht_race@desktop.jpg 1024w" sizes="(min-width: 768px) 50vw,100vw" alt="A very exciting yacht race.">
-                <!--[if IE 9]></video><![endif]-->
-                <img alt="Image">
-            </picture>
+            <source srcset="
+			https://responsiveimages.org/demos/on-a-grid/img/yacht_race@mobile.jpg 320w,
+			https://responsiveimages.org/demos/on-a-grid/img/yacht_race@tablet.jpg 768w,
+			https://responsiveimages.org/demos/on-a-grid/img/yacht_race@desktop.jpg 1024w" sizes="
+                (min-width: 768px) 50vw,
+                100vw" alt="A very exciting yacht race.">
         </div>
         <div class="col-xs-12 col-md-6">
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMake</p>
