trying without fallback

--- a/external/with_srcset.sizes.html
+++ b/external/with_srcset.sizes.html
@@ -38,9 +38,11 @@
                 (min-width: 768px) 50vw,
                 100vw" alt="A very exciting yacht race.">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="https://responsiveimages.org/demos/on-a-grid/img/yacht_race@fallback.jpg" alt="A very exciting yacht race.">
+                <img alt="A very exciting yacht race.">
             </picture>
-
+            <noscript>
+                <img srcset="https://responsiveimages.org/demos/on-a-grid/img/yacht_race@fallback.jpg" alt="A very exciting yacht race.">
+            </noscript>
 
         </div>
         <div class="col-xs-12 col-md-6">
