--- a/external/with_srcset.sizes.html
+++ b/external/with_srcset.sizes.html
@@ -54,7 +54,7 @@
                 <source data-srcset="https://responsiveimages.org/demos/on-a-grid/img/yacht_race@mobile.jpg 320w,
                                 https://responsiveimages.org/demos/on-a-grid/img/yacht_race@tablet.jpg 768w,
                                 https://responsiveimages.org/demos/on-a-grid/img/yacht_race@desktop.jpg 1024w"
-                        data-sizes="(min-width: 768px) 50vw,
+                        sizes="(min-width: 768px) 50vw,
                                 100vw"
                         class="lazload">
                 <img alt="A very exciting yacht race.">
