--- a/external/with_srcset.sizes.html
+++ b/external/with_srcset.sizes.html
@@ -36,7 +36,7 @@
                                 https://responsiveimages.org/demos/on-a-grid/img/yacht_race@desktop.jpg 1024w"
                         sizes="(min-width: 768px) 50vw,
                                 100vw">
-                <img alt="A very exciting yacht race.">
+                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt="A very exciting yacht race.">
             </picture>
             <noscript>
                 <img srcset="https://responsiveimages.org/demos/on-a-grid/img/yacht_race@fallback.jpg" alt="A very exciting yacht race.">
@@ -56,8 +56,8 @@
                                 https://responsiveimages.org/demos/on-a-grid/img/yacht_race@desktop.jpg 1024w"
                         sizes="(min-width: 768px) 50vw,
                                 100vw"
-                        class="lazload">
-                <img alt="A very exciting yacht race.">
+                        class="lazyload">
+                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt="A very exciting yacht race.">
             </picture>
             <noscript>
                 <img srcset="https://responsiveimages.org/demos/on-a-grid/img/yacht_race@fallback.jpg" alt="A very exciting yacht race.">
