--- a/external/with_srcset.sizes.html
+++ b/external/with_srcset.sizes.html
@@ -23,7 +23,7 @@
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/picturefill/2.3.1/picturefill.js"></script>
-    <script src="https://cdn.rawgit.com/aFarkas/lazysizes/gh-pages/lazysizes.min.js"></script>
+    <script src="https://cdn.rawgit.com/aFarkas/lazysizes/gh-pages/lazysizes.min.js" async></script>
 
 </head>
 <body>
@@ -54,10 +54,10 @@
                 <source data-srcset="https://responsiveimages.org/demos/on-a-grid/img/yacht_race@mobile.jpg 320w,
                                 https://responsiveimages.org/demos/on-a-grid/img/yacht_race@tablet.jpg 768w,
                                 https://responsiveimages.org/demos/on-a-grid/img/yacht_race@desktop.jpg 1024w"
-                        data-sizes="(min-width: 768px) 51vw,
-                                100vw"
+
                         class="lazyload">
-                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt="A very exciting yacht race.">
+                <img data-sizes="(min-width: 768px) 51vw,
+                                100vw" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt="A very exciting yacht race.">
             </picture>
             <noscript>
                 <img srcset="https://responsiveimages.org/demos/on-a-grid/img/yacht_race@fallback.jpg" alt="A very exciting yacht race.">
