--- a/external/with_srcset.sizes.html
+++ b/external/with_srcset.sizes.html
@@ -55,8 +55,8 @@
                                 https://responsiveimages.org/demos/on-a-grid/img/yacht_race@tablet.jpg 768w,
                                 https://responsiveimages.org/demos/on-a-grid/img/yacht_race@desktop.jpg 1024w"
 
-                        class="lazyload">
-                <img data-sizes="(min-width: 768px) 51vw,
+                        >
+                <img class="lazyload" data-sizes="(min-width: 768px) 51vw,
                                 100vw" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt="A very exciting yacht race.">
             </picture>
             <noscript>
