try sizes on img

--- a/external/with_srcset.sizes.html
+++ b/external/with_srcset.sizes.html
@@ -33,10 +33,10 @@
             <picture>
                 <source srcset="https://responsiveimages.org/demos/on-a-grid/img/yacht_race@mobile.jpg 320w,
                                 https://responsiveimages.org/demos/on-a-grid/img/yacht_race@tablet.jpg 768w,
-                                https://responsiveimages.org/demos/on-a-grid/img/yacht_race@desktop.jpg 1024w"
-                        sizes="(min-width: 768px) 50vw,
-                                100vw">
-                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt="A very exciting yacht race.">
+                                https://responsiveimages.org/demos/on-a-grid/img/yacht_race@desktop.jpg 1024w">
+
+                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" sizes="(min-width: 768px) 50vw,
+                                100vw" alt="A very exciting yacht race.">
             </picture>
             <noscript>
                 <img srcset="https://responsiveimages.org/demos/on-a-grid/img/yacht_race@fallback.jpg" alt="A very exciting yacht race.">
@@ -53,9 +53,7 @@
             <picture>
                 <source data-srcset="https://responsiveimages.org/demos/on-a-grid/img/yacht_race@mobile.jpg 320w,
                                 https://responsiveimages.org/demos/on-a-grid/img/yacht_race@tablet.jpg 768w,
-                                https://responsiveimages.org/demos/on-a-grid/img/yacht_race@desktop.jpg 1024w"
-
-                        >
+                                https://responsiveimages.org/demos/on-a-grid/img/yacht_race@desktop.jpg 1024w">
                 <img class="lazyload" data-sizes="(min-width: 768px) 50vw,
                                 100vw" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt="A very exciting yacht race.">
             </picture>
