added respimg js

--- a/external/with_srcset.sizes.html
+++ b/external/with_srcset.sizes.html
@@ -27,7 +27,7 @@
 
         if(!window.HTMLPictureElement || !('sizes' in document.createElement('img'))){
             document.createElement('picture');
-            loadJS("plugins/respimg/ls.respimg.min.js");
+            loadJS("plugins/ls.respimg.min.js");
         }
     </script>
     <script>
