--- a/external/with_srcset.sizes.html
+++ b/external/with_srcset.sizes.html
@@ -480,7 +480,7 @@
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.min.js"
-        data-main="../dist/main.js"></script>
+        data-main="dist/main.js"></script>
 
 </body>
 </html>
